--- a/HealthLifeAlarm/src/app/login/login.component.css
+++ b/HealthLifeAlarm/src/app/login/login.component.css
@@ -1,77 +1,67 @@
-.row{
-  height:100px;
-}
-
-#titulo{
-  margin-top: 10%;
-  margin-bottom: 10px;
-  color: white;
-}
-
 h1{
   text-align: center;
+  margin-top: 10%;
+  color: #3AC43A;
 }
 
-.display-1{
-  text-transform: lowercase !important;
+#icono{
+  text-align: center;
+  margin-top: 5%;
 }
 
 #textfield{
-  position: relative;
   text-align: center;
-  margin-top: 50%;
+  margin-top: 10%;
 }
 
-input::placeholder {
-  text-align: left;
-  color: #AFAFAF;
-  padding-left: 5px;
+label{
+  margin-top: 3%;
+  margin-bottom: 2%;
+  font-size: 1em;
+  justify-content: left;
+  padding-right: 40%;
 }
 
-p{
-  color: white;
-  font-weight: bold;
+#olvideClave{
+  text-align: center;
+  margin-top: 2%;
+}
+
+#iniciar{
+  text-align: center;
+  margin-top: 3%;
 }
 
 input{
   border: none;
+  height: 50px;
+  border-radius: 5px;
   background-color: white;
-  height: 40px;
-  border-radius: 10px;
-}
-
-#olvideClave{
-  position: relative;
-  text-align: center;
-  margin-top: 60%;
-}
-
-.col-6{
-  margin-top: 10%;
-  padding-left: 7%;
-
-}
-
-button{
-  height: 40px;
-  width: 80%;
-  background-color: #3AC43A;
-  border-radius: 10px;
-  color: white;
-  border: none;
-  font-size: 0.75em;
-  font-weight: bold;
-  box-shadow:inset 2px 2px 2px 2px #1F7E1E;
-  position: relative;
-  margin-top: 80%;
-}
-
-body{
-  background-color: #F3F3E6;
-  background-image: url('backgroundImage.jpg');
-  background-size: cover;
+  width: 50%;
+  box-shadow:inset 0px -3px 0px 0px #D5DBDB;
 }
 
 * {
  font-family: "Perpetua Titling MT", serif;
+ background-color: #F3F3E6;
+}
+
+img{
+  height: fit-content;
+}
+
+p{
+  color: #3AC43A;
+  font-size: 1.5em;
+}
+
+button{
+  height: 60px;
+  width: 25%;
+  background-color: #3AC43A;
+  border-radius: 10px;
+  color: white;
+  border: none;
+  font-size: 1.25em;
+  font-weight: bold;
 }
