--- a/HealthLifeAlarm/src/app/login/login.component.html
+++ b/HealthLifeAlarm/src/app/login/login.component.html
@@ -8,38 +8,61 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
   </head>
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12" id="titulo">
-        <h1 class="display-1" style="text-transform: lowercase !important;">HealthLife Alarm</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div id="textfield">
-        <input matInput type="text" id="usuario" name="usuario" placeholder="Usuario">
-      </div>
-    </div>
-    <div class="row">
-      <div id="textfield">
-        <input matInput type="text" id="clave" name="clave" placeholder="Clave">
-      </div>
-    </div>
-    <div class="row">
-      <div id="olvideClave">
-        <p [routerLink]="['/recuperar_clave']">Olvidé mi clave</p>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-6">
-        <button type="button" [routerLink]="['/crear_cuenta']">REGÍSTRESE</button>
+        <div class="row">
+          <div id="titulo">
+            <h1 class="display-1" style="text-transform: lowercase !important;">HealthLife Alarm</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div id="icono">
+            <img src="./assets/img/LogoApp.png" width="250" height="180"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col" id="textfield">
+            <div>
+              <label for="usuario">Usuario:</label>
+            </div>
+            <div>
+              <input matInput type="text" id="usuario" name="usuario">
+            </div>
+            <div>
+              <label for="clave">Clave:</label>
+            </div>
+            <div>
+              <input matInput type="text" id="clave" name="clave">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div id="olvideClave">
+            <p [routerLink]="['/recuperar_clave']">Olvidé mi clave</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col" id="iniciar">
+            <button type="button" [routerLink]="['/mis_habitos']">INICIAR SESIÓN</button>
+          </div>
+        </div>
       </div>
       <div class="col-6">
-        <button type="button" [routerLink]="['/mis_habitos']">INICIAR SESIÓN</button>
+        <div>
+          <img src="./assets/img/backgroundImage.jpg" alt="imagenCorportativa" style="width:100%;">
+        </div>
       </div>
     </div>
+
+
+
+
+
+
+
 
 
   </div>
