--- a/HealthLifeAlarm/src/app/recuperarClave/recuperarClave.component.css
+++ b/HealthLifeAlarm/src/app/recuperarClave/recuperarClave.component.css
@@ -1,83 +1,112 @@
-.row{
-  height:100px;
+h1{
+  text-align: center;
+  margin-top: 10%;
+  color: #3AC43A;
 }
 
 h2{
   text-align: center;
-  margin-top: 10%;
   color: #3AC43A;
-  font-size: 30px;
-}
-
-#icono{
-  text-align: center;
-  margin-top: 10%;
 }
 
 #textfield{
   text-align: center;
-  margin-top: 20%;
-  position: relative;
+  margin-top: 15%;
 }
 
-#clave{
-  text-align: left;
-  color: #AFAFAF;
-}
-
-#buttons{
-  position:relative;
-  margin-top: 20%;
-
-}
-
-p{
-  color: #3AC43A;
-  font-weight: bold;
+#iniciar{
+  text-align: center;
+  margin-top: 3%;
 }
 
 input{
   border: none;
+  height: 60px;
+  border-radius: 5px;
   background-color: white;
-  height: 30px;
-  border-radius: 10px;
-}
-
-#ingresarCorreo{
-  text-align: center;
-  margin-top: 30%;
-}
-
-.col-6{
+  width: 50%;
+  box-shadow:inset 0px -3px 0px 0px #D5DBDB;
   margin-top: 10%;
-  padding-left: 13%;
+  font-size: 2em;
+  padding-left: 20px;
+}
+
+* {
+ font-family: "Perpetua Titling MT", serif;
+ background-color: #F3F3E6;
+}
+
+img{
+  height: fit-content;
+}
+
+p{
+  color: #3AC43A;
+}
+
+#buttons{
+  margin-top: 20%;
+  text-align: center;
+  padding-left: 20%;
+  padding-right: 20%;
+
 }
 
 button{
-  height: 40px;
-  width: 80%;
+  height: 100px;
+  width: 70%;
   border-radius: 10px;
   border: none;
-  font-size: 0.75em;
+  font-size: 2em;
   font-weight: bold;
 }
 
 #btn_volver{
   background-color: white;
   color: #3AC43A;
-  box-shadow:inset 2px 2px 2px 2px #E6E7E6;
 }
 
 #btn_confirmar{
   background-color: #3AC43A;
   color: white;
-  box-shadow:inset 2px 2px 2px 2px #1F7E1E;
 }
 
-body{
-  background-color: #F3F3E6;
+input::placeholder{
+  padding-left: 10px;
+  font-size: 1em;
 }
 
-* {
-  font-family: "Perpetua Titling MT", serif;
- }
+h3{
+  color: #808080;
+  font-size: 2em;
+  text-align: center;
+  background-color: white;
+}
+
+#buttondg{
+  border-radius: 5px;
+  color: #808080;
+  background-color: white;
+  text-align: center;
+  height: 20%;
+  width: 40%;
+  margin-right: 32%;
+  margin-top: 10%;
+}
+
+.material-icons{
+  font-family: 'Material Icons' !important;
+}
+
+mat-icon {
+  font-size: 70px;
+  height: 70px;
+  width: 100px;
+  color: #3AC43A;
+  background-color: white;
+  margin-left: 45%;
+}
+
+input:focus{
+  outline: none;
+}
