--- a/HealthLifeAlarm/src/app/actualizar_datos/actualizar_datos.component.html
+++ b/HealthLifeAlarm/src/app/actualizar_datos/actualizar_datos.component.html
@@ -1,128 +1,66 @@
-<div class="page-container">
-  <header>
-    <div>
-      <button mat-button class="menu-button" (click)="sidenav.toggle()">
-        <mat-icon [ngStyle]="{'color':'white'}">{{ isMenuOpen ? 'menu_open' : 'menu' }}</mat-icon>
-      </button>
-      <span class="app-title">Actualizar datos</span>
-    </div>
-  </header>
-  <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #sidenav position="start" autoFocus="false" mode="over" [(opened)]="isMenuOpen" class="sidenav">
-      <br>
-      <div class="logo-nav">
-        <img src="./assets/img/LogoApp.png">
-        <p style="margin-left: 5%; font-size: large;">Health Life Alarm</p>
-        <p style="margin-left: 5%;">Usuario</p>
-      </div>
-      <hr>
-      <a mat-button type="button" routerLink="/mis_habitos"><mat-icon>home</mat-icon>Home</a>
-      <a mat-button type="button" routerLink="/mis_habitos"><mat-icon>fitness_center</mat-icon>Mis Hábitos</a>
-      <a mat-button type="button" routerLink="/mi_progreso"><mat-icon>bar_chart</mat-icon>Mi Progreso</a>
-      <a mat-button type="button" routerLink="/actualizar_datos"><mat-icon>manage_accounts</mat-icon>Actualizar Datos</a>
-      <a mat-button type="button" routerLink="/eliminar_cuenta"><mat-icon>delete_forever</mat-icon>Eliminar Cuenta</a>
-      <a mat-button type="button" routerLink=""><mat-icon>exit_to_app</mat-icon>Cerrar Sesión</a>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <main>
-        <div class="row">
-          <div id="confirmarEliminar">
-            <div>
-              <label for="name">Nombre(s)</label>
-              <input matInput type="text" id="crear" name="name" value="Alberto">
-            </div>
-            <div>
-              <label for="lastname">Apellido(s)</label>
-              <input matInput type="text" id="crear" name="lastname" value="Fernandez">
-            </div>
-            <div>
-              <label for="lastname">Correo electrónico(s)</label>
-              <input matInput type="text" id="crear" name="email" value="albertofernandez@gmail.com">
-            </div>
-            <div>
-              <label for="clave">Clave</label>
-              <input matInput type="text" id="clave" name="clave" value="*******">
-              <mat-icon style="vertical-align: middle;">remove_red_eye</mat-icon>
-            </div>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-          </div>
-        </div>
-        <div class="row">
-          <div id="opcionales">
-            <p>Los siguientes datos nos ayudan a recomendarle planes (opcionales):</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
-            <p id="birth">fecha de nacimiento:</p>
-            <input type="text" id="nacimiento" name="usuario" value="1987/06/14">
-          </div>
-          <div class="col-3" id="datosOpcionales">
-              <p id="sexo">Sexo:</p>
-            <div id="radioSexo">
-              <div id="lista">
-                <input type="radio">
-              </div>
-              <div id="lista">
-                <p id="labelRadio">Femenino</p>
-              </div>
-            </div>
-            <div id="radioSexo">
-              <div id="lista">
-                <input type="radio">
-              </div>
-              <div id="lista">
-                <p id="labelRadio">Masculino</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-3">
-            <p id="genero">genero:</p>
-            <select name="genero">
-              <option value="seleccionar" selected>Heterosexual</option>
-              <option value="hombre">Hombre</option>
-              <option value="mujer">Mujer</option>
-            </select>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  </head>
+<body>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-6">
+        <div class="selector">
+          <div>
+            <h1>¿Realmente desea eliminar su cuenta?</h1>
           </div>
           <div>
-            <div class="col-6" id="enfermedad">
-              <div>
-                <p id="enfer">Sufre de alguna enfermedad</p>
-              </div>
-              <div id="selec">
-                <div class="col-3">
-                  <input type="radio" name="no">
-                </div>
-                <div class="col-3">
-                  <label for="no" style="color: #3AC43A;">No</label>
-                </div>
-              </div>
-              <div id="selec">
-                <div class="col-3">
-                  <input type="radio" name="si">
-                </div>
-                <div class="col-3">
-                  <label for="no" style="color: #3AC43A;">Si</label>
-                </div>
-              </div>
-            </div>
-            <div class="col-6" id="enfermedad">
-              <input type="text" id="nacimiento" value="Hipertensión">
-            </div>
+            <h2>Se eliminará permanentemente:</h2>
           </div>
-          <div class="row" id="buttons">
-            <div class="col-6" id="btn">
-              <button mat-button type="button" id="btn_volver" [routerLink]="['/mis_habitos']">VOLVER</button>
+          <div class="row">
+            <div class="col">
+              <mat-icon style="vertical-align: middle;">delete_forever</mat-icon>
             </div>
-            <div class="col-6" id="btn">
-              <button mat-button type="button" id="btn_confirmar" [routerLink]="['/mis_habitos']">CONFIRMAR</button>
+            <div class="col">
+              <p>- Datos de perfil</p>
+              <p>- Configuraciones</p>
+              <p>- Información histórica</p>
             </div>
           </div>
         </div>
-      </main>
-    </mat-sidenav-content>
-  </mat-sidenav-container>
-</div>
 
 
+        <div class="row" id="buttons">
+          <div class="col-6">
+            <button type="button" id="btn_volver" [routerLink]="['/']">CANCELAR</button>
+          </div>
+          <div class="col-6">
+            <button type="button" id="btn_confirmar">CONFIRMAR</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div>
+          <img src="./assets/img/backgroundImage.jpg" alt="imagenCorportativa" style="width:100%;">
+        </div>
+      </div>
+    </div>
 
+
+  </div>
+
+  <!-- Optional JavaScript; choose one of the two! -->
+
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  -->
+</body>
+</html>
