--- a/HealthLifeAlarm/src/app/eliminar_cuenta/eliminar_cuenta.component.html
+++ b/HealthLifeAlarm/src/app/eliminar_cuenta/eliminar_cuenta.component.html
@@ -8,45 +8,44 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
   </head>
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12">
-        <h2 class="display-1">Eliminar cuenta</h2>
-      </div>
-    </div>
-    <div class="row">
-      <div id="icono">
-        <img src="./assets/img/LogoApp.png" width="200" height="100"/>
-      </div>
-    </div>
-    <div class="row">
-      <div id="confirmarEliminar">
-        <p>Está seguro que desea eliminar su cuenta?</p>
-      </div>
-    </div>
-    <div class="row" id="radios">
-      <div class="col-3" id="radio">
-        <input type="radio">
-      </div>
-      <div class="col-3">
-        <label for="eliminar">Si, deseo eliminarla</label>
-      </div>
-      <div class="col-3" id="radio">
-        <input type="radio">
-      </div>
-      <div class="col-3">
-        <label for="no_eliminar">No, quiero continuar</label>
-      </div>
-    </div>
-    <div class="row" id="buttons">
       <div class="col-6">
-        <button type="button" id="btn_volver" [routerLink]="['/mis_habitos']">VOLVER</button>
+        <div class="selector">
+          <div>
+            <h1>¿Realmente desea eliminar su cuenta?</h1>
+          </div>
+          <div>
+            <h2>Se eliminará permanentemente:</h2>
+          </div>
+          <div class="row">
+            <div class="col">
+              <mat-icon style="vertical-align: middle;">delete_forever</mat-icon>
+            </div>
+            <div class="col">
+              <p>- Datos de perfil</p>
+              <p>- Configuraciones</p>
+              <p>- Información histórica</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="row" id="buttons">
+          <div class="col-6">
+            <button type="button" id="btn_volver" [routerLink]="['/mis_habitos']">CANCELAR</button>
+          </div>
+          <div class="col-6">
+            <button type="button" id="btn_confirmar" [routerLink]="['/']">CONFIRMAR</button>
+          </div>
+        </div>
       </div>
       <div class="col-6">
-        <button type="button" id="btn_confirmar" [routerLink]="['/']">CONFIRMAR</button>
+        <div>
+          <img src="./assets/img/backgroundImage.jpg" alt="imagenCorportativa" style="width:100%;">
+        </div>
       </div>
     </div>
 
