--- a/HealthLifeAlarm/src/app/mis_habitos/mis_habitos.component.html
+++ b/HealthLifeAlarm/src/app/mis_habitos/mis_habitos.component.html
@@ -17,7 +17,7 @@
       <button mat-button [routerLink]="'/estadisticas'"><mat-icon>pie_chart</mat-icon>Estadisticas</button>
       <button mat-button [routerLink]="'/actualizar_datos'"><mat-icon>manage_accounts</mat-icon>Actualizar Datos</button>
       <button mat-button [routerLink]="'/eliminar_cuenta'"><mat-icon>delete_forever</mat-icon>Eliminar Cuenta</button>
-      <button mat-button [routerLink]=""><mat-icon>exit_to_app</mat-icon>Cerrar Sesión</button>
+      <button mat-button [routerLink]="'/'"><mat-icon>exit_to_app</mat-icon>Cerrar Sesión</button>
     </mat-nav-list>
   </mat-grid-tile>
   <mat-grid-tile [colspan]="2" [rowspan]="3">
