--- a/HealthLifeAlarm/src/app/recuperarClave/recuperarClave.component.html
+++ b/HealthLifeAlarm/src/app/recuperarClave/recuperarClave.component.html
@@ -50,7 +50,7 @@
         <mat-icon style="vertical-align: middle;">done</mat-icon>
         <h3 mat-dialog-text>Se ha reestablecido satisfactoriamente su clave. Por favor, verifique su correo electrónico.</h3>
 
-        <div mat-dialog-actions align="end">
+        <div mat-dialog-actions align="end" style="background-color: white;">
           <button id="buttondg" mat-button (click)="onNoClick()" [routerLink]="['/']">ACEPTAR</button>
         </div>
       </div>
