--- a/HealthLifeAlarm/src/app/actualizar_datos/actualizar_datos.component.css
+++ b/HealthLifeAlarm/src/app/actualizar_datos/actualizar_datos.component.css
@@ -1,16 +1,8 @@
 h1{
   text-align: center;
   color: #3AC43A;
-  font-size: 4em;
-  padding-top: 20%;
-}
-
-h2{
-  text-align: center;
-  color: #3AC43A;
-  font-size: 3em;
-  padding-top: 10%;
-
+  font-size: 2em;
+  padding-top: 5%;
 }
 
 * {
@@ -22,12 +14,32 @@ img{
   height: fit-content;
 }
 
+#textfield{
+  text-align: left;
+  padding-left: 34%;
+}
+
+label{
+  margin-top: 3%;
+  margin-bottom: 2%;
+  font-size: 0.75em;
+}
+
+input{
+  border: none;
+  height: 35px;
+  border-radius: 5px;
+  background-color: white;
+  width: 50%;
+  font-size: 0.75em;
+}
+
 p{
   color: #3AC43A;
 }
 
 #buttons{
-  margin-top: 20%;
+  margin-top: 5%;
   text-align: center;
   padding-left: 20%;
   padding-right: 20%;
@@ -35,11 +47,11 @@ p{
 }
 
 button{
-  height: 100px;
-  width: 70%;
-  border-radius: 10px;
+  height: 50px;
+  width: 80%;
+  border-radius: 5px;
   border: none;
-  font-size: 2em;
+  font-size: 1em;
   font-weight: bold;
 }
 
@@ -53,33 +65,19 @@ button{
   color: white;
 }
 
-#buttondg{
-  border-radius: 5px;
-  color: #808080;
-  background-color: white;
-  text-align: center;
-  height: 20%;
-  width: 40%;
-  margin-right: 32%;
-  margin-top: 10%;
-}
-
 .material-icons{
   font-family: 'Material Icons' !important;
 }
 
 mat-icon {
-  font-size: 200px;
-  height: 170px;
-  width: 200px;
+  font-size: 100px;
+  height: 100px;
+  width: 100px;
   color: #3AC43A;
-  margin-left: 50%;
-}
-
-p{
-  font-size: 2em;
+  margin-left: 40%;
 }
 
 .container-fluid{
   background: #D4CFB6;
 }
+
