--- a/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.css
+++ b/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.css
@@ -90,7 +90,7 @@
 }
 
 h2{
-  font-size: 0.75em;
+  font-size: 1em;
   color: #006400;
   text-align: center;
 }
@@ -105,12 +105,12 @@ h2{
   box-shadow:inset 2px 2px 2px 2px #1F7E1E;
 }
 
-[type=button]{
+button{
   height: 40px;
-  width: 30%;
-  border-radius: 10px;
+  width: 20%;
+  border-radius: 5px;
   border: none;
-  font-size: 0.75em;
+  font-size: 1em;
   font-weight: bold;
 }
 
@@ -124,4 +124,17 @@ h2{
 
  .material-icons{
   font-family: 'Material Icons' !important;
+}
+
+#icono{
+  text-align: center;
+  color: orange;
+  font-size: 50px;
+  height: 70px;
+  width: 100px;
+  margin-left: 45%;
+}
+
+h3{
+  color: #3AC43A;
 }
