--- a/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.html
+++ b/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.html
@@ -1,3 +1,14 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  </head>
+<body>
 <div class="page-container">
   <header>
     <div>
@@ -27,6 +38,11 @@
       <main>
         <div class="container">
           <div class="row">
+            <div class="col">
+              <h3>Información histórica</h3>
+            </div>
+          </div>
+          <div class="row">
             <div class ="col">
                 <h2>Distribución de tiempo empleado por hábito:</h2>
                 <app-pieChart></app-pieChart>
@@ -53,12 +69,7 @@
               </div>
             </div>
           </div>
-
         </div>
-
-
-
-
         <div class="row" id="buttons">
           <div>
             <button mat-button type="button" id="btn_volver" [routerLink]="['/mi_progreso']">VOLVER</button>
@@ -69,6 +80,7 @@
 
   </mat-sidenav-container>
 </div>
-
+</body>
+</html>
 
 
