--- a/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.css
+++ b/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.css
@@ -1,93 +1,68 @@
-.page-container {
-  height: 100%;
-  background: #F3F3E6;
-  color: #ffffff;
-  display: flex;
-  flex-direction: column;
+::ng-deep .mdc-list-item__primary-text {
+  font-family: "Perpetua Titling MT", serif !important;
 }
-.page-container a {
-  color: inherit;
-  text-decoration: none;
+
+ .app-title {
+  color: #3AC43A;
+  font-size: xx-large;
+  align-items: flex-end;
+  margin-left: 5px;
+  margin-top: 40px;
+ }
+
+.sidenav {
+  margin-left: 2%;
+  width: 100%;
 }
-.page-container header {
-  background: #3ac43a;
-  color: #fff;
-  padding: 18px 24px;
-  font-size: 14px;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
+
+.mat-elevation-z4 {
+	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12)
 }
-.page-container header .menu-button {
-  margin-right: 24px;
-  min-width: 0;
-  padding: 0;
-  line-height: normal;
-  background-color: #3AC43A;
-  border: none;
-}
-.page-container header .app-title {
-  padding: 0 3px;
-}
-.sidenav-container {
-  background-color: #F3F3E6;
-  flex: 1;
-}
-.sidenav-container .sidenav {
-  min-width: 80%;
-  color:#3ac43a;
-}
-.sidenav-container .sidenav a {
+
+.sidenav button {
   display: block;
-  padding: 6px 24px;
   width: 100%;
   text-align: left;
+  color:#3AC43A
 }
-.sidenav-container main {
-  padding: 18px 24px;
+
+button{
+  background-color: #F3F3E6;
+}
+
+mat-grid-tile {
+  background: #F3F3E6;
+}
+
+::ng-deep .mat-grid-tile-content{
+  align-items: normal !important;
+  justify-content: start !important;
+  display: inline-flex !important;
+}
+
+.logo-nav {
+  display: inline-flex;
+  align-items: center;
 }
 
 .logo-nav img {
-  width: 110px;
-  height: 50px;
-  margin-left: 5%;
+  width: 130px;
+  height: 70px;
+  margin-left: 0%;
 }
 
-.app-title {
-  color: #ffffff;
-  font-size: large;
+.right_panel {
+  background-color: #F3F3E6;
+  background-image: url('yoga.png');
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 }
 
-.parent {
-  display: flex;
-  flex-direction: row;
-  flex-wrap:wrap;
+.mat-elevation-z8 {
+	box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0), 0px 8px 10px 1px rgba(0, 0, 0, 0), 0px 0px 14px 2px rgba(0, 0, 0, 0.12)
 }
 
-.mat-mdc-standard-chip {
-  --mdc-chip-label-text-color: #fff;
-  --mdc-chip-elevated-container-color: #3ac43a;
-}
-
-.botonAppSolo{
-  height: 40px;
-  width: 80%;
-  background-color: #3AC43A;
-  border-radius: 10px;
-  color: white;
-  border: none;
-  font-size: 0.75em;
-  font-weight: bold;
-  text-transform: uppercase;
-  box-shadow:inset 2px 2px 2px 2px #1F7E1E;
-  margin-left: auto;
-  margin-right: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
 
 h2{
   font-size: 1em;
@@ -135,6 +110,23 @@ button{
   margin-left: 45%;
 }
 
+
 h3{
-  color: #3AC43A;
+  font-size: 14px;
+  color: #006400;
+  text-align: left;
+  background-color: #F3F3E6;
+  height: 15px;
+  padding: 15px;
+  align-content: center;
+}
+
+mat-grid-tile {
+  background: #F3F3E6;
+}
+
+::ng-deep .mat-grid-tile-content{
+  align-items: normal !important;
+  justify-content: start !important;
+  display: inline-flex !important;
 }
