--- a/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.html
+++ b/HealthLifeAlarm/src/app/estadisticas/estadisticas.component.html
@@ -1,53 +1,45 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
 <body>
-<div class="page-container">
-  <header>
-    <div>
-      <button mat-button class="menu-button" (click)="sidenav.toggle()">
-        <mat-icon [ngStyle]="{'color':'white'}">{{ isMenuOpen ? 'menu_open' : 'menu' }}</mat-icon>
-      </button>
-      <span class="app-title">Estadísticas</span>
-    </div>
-  </header>
-  <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #sidenav position="start" autoFocus="false" mode="over" [(opened)]="isMenuOpen" class="sidenav">
-      <br>
+  <mat-grid-list cols="4" rowHeight="2:1">
+    <mat-grid-tile [colspan]="3 " [rowspan]="1">
       <div class="logo-nav">
         <img src="./assets/img/LogoApp.png">
-        <p style="margin-left: 5%; font-size: large;">Health Life Alarm</p>
-        <p style="margin-left: 5%;">Usuario</p>
+        <div class="app-title">Health Life Alarm</div>
       </div>
-      <hr>
-      <a mat-button type="button" routerLink="/mis_habitos"><mat-icon>home</mat-icon>Home</a>
-      <a mat-button type="button" routerLink="/mis_habitos"><mat-icon>fitness_center</mat-icon>Mis Hábitos</a>
-      <a mat-button type="button" routerLink="/mi_progreso"><mat-icon>bar_chart</mat-icon>Mi Progreso</a>
-      <a mat-button type="button" routerLink="/actualizar_datos"><mat-icon>manage_accounts</mat-icon>Actualizar Datos</a>
-      <a mat-button type="button" routerLink="/eliminar_cuenta"><mat-icon>delete_forever</mat-icon>Eliminar Cuenta</a>
-      <a mat-button type="button" routerLink=""><mat-icon>exit_to_app</mat-icon>Cerrar Sesión</a>
-    </mat-sidenav>
-    <mat-sidenav-content>
-      <main>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1" [rowspan]="4">
+      <div class="right_panel"></div>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1" [rowspan]="3" class="mat-elevation-z8">
+      <mat-nav-list class="sidenav mat-elevation-z8">
+        <h3>Menú principal</h3>
+        <button mat-button [routerLink]="'/mis_habitos'"><mat-icon>home</mat-icon>Home</button>
+        <button mat-button [routerLink]="'/mis_habitos'"><mat-icon>fitness_center</mat-icon>Mis Hábitos</button>
+        <button mat-button [routerLink]="'/mi_progreso'"><mat-icon>bar_chart</mat-icon>Mi Progreso</button>
+        <button mat-button [routerLink]="'/estadisticas'"><mat-icon>pie_chart</mat-icon>Estadisticas</button>
+        <button mat-button [routerLink]="'/actualizar_datos'"><mat-icon>manage_accounts</mat-icon>Actualizar Datos</button>
+        <button mat-button [routerLink]="'/eliminar_cuenta'"><mat-icon>delete_forever</mat-icon>Eliminar Cuenta</button>
+        <button mat-button [routerLink]="''"><mat-icon>exit_to_app</mat-icon>Cerrar Sesión</button>
+      </mat-nav-list>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="2" [rowspan]="3" class="mat-elevation-z8">
         <div class="container">
           <div class="row">
             <div class="col">
-              <h3>Información histórica</h3>
+              <h3 id="titulo">Información histórica</h3>
             </div>
           </div>
           <div class="row">
-            <div class ="col">
+            <div class ="col-6">
                 <h2>Distribución de tiempo empleado por hábito:</h2>
                 <app-pieChart></app-pieChart>
             </div>
-            <div class ="col">
+            <div class ="col-6">
                 <h2>Hábitos más frecuentados en el último mes:</h2>
               <div>
                 <ngx-charts-bar-horizontal
@@ -70,16 +62,15 @@
             </div>
           </div>
         </div>
-        <div class="row" id="buttons">
-          <div>
-            <button mat-button type="button" id="btn_volver" [routerLink]="['/mi_progreso']">VOLVER</button>
-          </div>
-        </div>
-      </main>
-    </mat-sidenav-content>
 
-  </mat-sidenav-container>
-</div>
+
+
+    </mat-grid-tile>
+
+  </mat-grid-list>
+
+
+
 </body>
 </html>
 
